Promiscuous mode and CLI parameters

--- a/writeup.html
+++ b/writeup.html
@@ -1,5 +1,33 @@
+<p>
+David Jara
+</p>
+<p>
+April 28th, 2025
+</p>
+<h1 style="text-align: center;">
+SEED Lab: Packet Sniffing
+</h1>
 <h1 id="table-of-contents">Table of Contents</h1>
-<p><a href="#LINK">Link</a> <a href="#LINK">Link</a> <a href="#LINK">Link</a> <a href="#LINK">Link</a> <a href="#LINK">Link</a> <a href="#LINK">Link</a></p>
+<ol type="I">
+<li>
+<a href="#LINK">Link</a>
+</li>
+<li>
+<a href="#LINK">Link</a>
+</li>
+<li>
+<a href="#LINK">Link</a>
+</li>
+<li>
+<a href="#LINK">Link</a>
+</li>
+<li>
+<a href="#LINK">Link</a>
+</li>
+<li>
+<a href="#LINK">Link</a>
+</li>
+</ol>
 <h1 id="task-2.1a-understanding-how-a-sniffer-works">Task 2.1A: Understanding How a Sniffer Works</h1>
 <p><strong>Question 1:</strong> Please use your own words to describe the sequence of the library calls that are essential for sniffer programs. This is meant to be a summary, not detailed explanation like the one in the tutorial or book.</p>
 <blockquote>
